--- a/part_2/my_styles.css
+++ b/part_2/my_styles.css
@@ -1,7 +1,59 @@
-
 * {
   box-sizing: border-box;
 
   /* Make the invisible visible */
   border: thin red solid;
+}
+
+.row {
+  clear: both;
+}
+
+.button {
+  color: white;
+  text-decoration: none;
+  height: 30px;
+  width: 150px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 20px;
+  padding-top: 5px;
+
+  background-color: blue;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.splash {
+  height: 200px;
+  background-color: lightgray;
+}
+
+.full-width {
+  float: left;
+  width: 100%;
+}
+
+.two-third {
+  float: left;
+  width: 66%;
+}
+
+.one-third {
+  float: left;
+  width: 33%;
+}
+
+.one-fourth {
+  float: left;
+  width: 25%;
+}
+
+.content-container {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+  float: right;
 }
